--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Sun, 24 Nov 2013.
+%% Created using Papers on Tue, 26 Nov 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -2555,6 +2555,19 @@ author = {{High Performance Fortran Forum}},
 howpublished = {Rice University},
 month = jan,
 year = {1997}
+}
+
+@webpage{Graphviz:1998ui,
+title = {{The DOT Language}},
+url = {http://www.graphviz.org/content/dot-language}
+}
+
+@incollection{Ellson:2001wf,
+author = {Ellson, John and Gansner, Emden and Lefohn, Aaron E and North, Stephen and Woodhull, Gordon},
+title = {{Graphviz --- open source graph drawing tools}},
+year = {2001},
+pages = {483--484},
+publisher = {Springer Berlin Heidelberg}
 }
 
 @inproceedings{Warren:1984ka,
